--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -25,3 +25,21 @@ header {
         }
     }
 }
+
+@media screen and (min-width: 768px) {
+    header {
+        .alerta {
+            font-size: 1rem;
+        }
+
+        .container {
+            img {
+                @include mixins.tamanho-imagem(2em, 2.5em);
+            }
+
+            a {
+                font-size: 1,25rem;
+            }
+        }
+    }
+}
