--- a/styles/components/_cards.scss
+++ b/styles/components/_cards.scss
@@ -30,3 +30,12 @@
         }
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .cards {
+        margin: 0;
+        .card {
+            width: 17.5em;
+        }
+    }
+}
